Add inquiry management features and update dependencies
- Introduced HTML templates for making and viewing inquiries.
- Updated InquiryService to include methods for saving and updating inquiry status.
- Refactored file path handling to use Path.of() instead of Paths.get().
- Updated Spring Security configuration to use authorizeHttpRequests.
- Changed javax imports to jakarta in relevant classes.
- Updated pom.xml to use newer versions of Spring Boot and Jakarta EE.